Fix notification bubble alignment across all browsers

--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -30,6 +30,11 @@
     overflow-x: hidden;
 }
 
+.badge {
+    position: absolute;
+    right: @navbar-padding-horizontal;
+}
+
 @media (max-width: @screen-sm - 1px) {
     #odooMenuBarNav[aria-expanded="false"] {
         /* Hack to hide the visibly expanded mobile menu on load. */
